[tool.poetry]
name = "color-quest"
version = "0.1.2"
description = ""
authors = ["Kotaro Sonoda <kotaro@nagasaki-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
numpy = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
color_quest = "color_quest.__init__:main"
