[tool.poetry]
name = "color-quest"
version = "0.1.5"
description = ""
authors = ["Kotaro Sonoda <kotaro@nagasaki-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3, <4"
matplotlib = "^3"
numpy = ">=2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
color_quest = "color_quest.__init__:main"
